# bevy_energy

./: Cargo.lock.back  Cargo.toml  README.md  \
assets/surfaces/pavement/: concrete_pavement_4k.gltf
assets/weapons/mpx/: main.glb
src/: diag.rs  main.rs  movement.rs  scene.rs
