[package]
name = "energy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.1", features = ["dynamic_linking"] }
#bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
wayland-sys = {version = "0.31", features = ["dlopen"]}
rand = "0.9.1"
# avian3d = { version = "0.3.1", features = [ "diagnostic_ui", ] }
avian3d = { git = "https://github.com/Jondolf/avian", branch="main", features = [ "diagnostic_ui", ] }
bevy_dev_tools = "0.17.1"
# wayland-sys = { version = "0.31.7", features = ["dlopen"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

